# OrderManagementSystem

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  vcpkg.json
benchmarks/: spsc_queue_bench.cpp
include/common/: order.hpp  spsc_queue.hpp
src/common/: memory_allocator.cpp  message_bus.cpp  spsc_queue.cpp
src/router/: router.cpp
tests/: spsc_queue_test.cpp
tools/: generate_orders.cpp
